--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,4 @@
 DB_URL=mongodb+srv://dianasfarhat:npFxdVQv3s9mxprQ@cluster0.lej47.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=helloandwelcometoourmernproject
+NODE_ENV=development
+JWT_EXPIRES_IN="30d"
