--- a/backend/.env
+++ b/backend/.env
@@ -2,4 +2,5 @@ DB_URL=mongodb+srv://dianasfarhat:npFxdVQv3s9mxprQ@cluster0.lej47.mongodb.net/?r
 JWT_SECRET=helloandwelcometoourmernproject
 NODE_ENV=development
 JWT_EXPIRES_IN="30d"
+PAYPAL_CLIENT_ID=AbCdEfGhIjKlMnOpQrStUvWxYz
 
