--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -21,6 +22,7 @@
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.2.2",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
