--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^11.0.3",
     "redux": "^5.0.1",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.16.0",
     "swiper": "^11.2.2",
     "web-vitals": "^4.2.4"
   },
