--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
+    "firebase": "^11.3.1",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "react": "^19.0.0",
